Changes from jTDS 1.1
=====================

10/20/2005 - Alin Sinpalean
 o Corrected bug [1293415] Charset iso_1 is broken for Sybase. For Sybase the
   server's iso_1 charset maps to the standard ISO-8859-1, rather than Cp1252
   as it does for MS SQL Server.
 o Applied Mike's fix for bug [1330118] SSL fails with SQL 2005 September CTP.

10/18/2005 - Alin Sinpalean
 o Corrected bug [1327029] setFetchSize give incorrect error message.
 o Corrected bug [1296482] setAutoCommit() behaviour. According to section
   10.1.1 of the JDBC 3.0 spec (which takes precedence over the API
   documentation) the transaction should only be committed if the auto-commit
   mode is _changed_ during a transaction.

09/27/2005 - David Kilzer
 o Added info to the FAQ about the jTDS implementation of
   javax.naming.spi.ObjectFactory.

09/26/2005 - David Kilzer
 o Applied Mike's patch for bug [1299147] Latest change does not compile
   with java 1.5.  This patch cleans up the use of checkOpen() in a
   number of methods in JtdsCallableStatement, JtdsPreparedStatement,
   JtdsStatement and JtdsResultSet.

09/23/2005 - David Kilzer
 o Fixed compilation on Java 1.5 in MessagesPropertiesUnitTest.  Thanks
   to Mike Hutchinson for the patch in bug [1299147] Latest change does
   not compile with java 1.5.

09/22/2005 - David Kilzer
 o Added MessagesPropertiesUnitTest to ensure every prop.* property has
   a matching prop.desc.* property and vice-versa.

09/21/2005 - David Kilzer
 o Applied patch for bug [1253127] Improved decimal peformance for MSSQL
   SP4 by Mike Hutchinson.  This patch also fixes bug [1236078] Procedure
   doesn't get called for some BigDecimal values (in Java 1.5).

09/20/2005 - David Kilzer
 o Removed RequestStream.setMaxPrecision() and added a 'maxPrecision'
   argument to the RequestStream constructor.  This value should never
   change during the life of the RequestStream, and thus should be set
   in the constructor.  Updated SharedSocket.getRequestStream() method.